fix: 화면 비율에 따른 반응형 오류 및 pre 태그 wrapping 옵션 추가
Former-commit-id: b52e862b32520d50b10c3ec7cf88c6b7e7f6d50f

--- a/frontend/src/assets/animatedText.css
+++ b/frontend/src/assets/animatedText.css
@@ -2,8 +2,8 @@
 .animated-title .track {position: absolute; white-space: nowrap;will-change: transform;animation: marquee 6.5s linear infinite; }
 @keyframes marquee {
   0% {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
+    -webkit-transform: translate3d(30%, 0, 0);
+    transform: translate3d(30%, 0, 0);
   }
   100% {
     -webkit-transform: translate3d(-100%, 0, 0);
